@@ -34,6 +34,9 @@
    - stevesk@cvs.openbsd.org 2006/02/08 12:32:49
      [includes.h misc.c]
      move #include <netinet/tcp.h> out of includes.h; ok markus@
+   - stevesk@cvs.openbsd.org 2006/02/08 13:15:44
+     [gss-serv.c monitor.c]
+     small KNF
 
 20060313
  - (dtucker) [configure.ac] Bug #1171: Don't use printf("%lld", longlong)
